# mangle-rs

./: .gitignore  ARCHITECTURE_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Containerfile  README.md
.forgejo/workflows/: ci.yml
.github/workflows/: ffi.yml  release-mangle-py.yml
analysis/src/: planner.rs
codegen/src/: lib.rs
crates/mangle-analysis/: Cargo.toml  README.md
crates/mangle-analysis/src/: bounds_check.rs  lib.rs  lowering.rs  name_trie.rs  planner.rs  rename.rs  stratification.rs  tests.rs  type_check.rs  type_expr.rs
crates/mangle-ast/: Cargo.toml  README.md
crates/mangle-ast/src/: lib.rs  pretty.rs
crates/mangle-codegen/: Cargo.toml  README.md
crates/mangle-codegen/src/: lib.rs
crates/mangle-common/: Cargo.toml  README.md
crates/mangle-common/src/: lib.rs  tablestore.rs
crates/mangle-db/: Cargo.toml
crates/mangle-db/src/: backend.rs  database.rs  disk_store.rs  file_backend.rs  file_source.rs  lib.rs  predicate.rs  provenance.rs  simplerow.rs  source.rs
crates/mangle-delta/: Cargo.toml  README.md
crates/mangle-delta/src/: convert.rs  lib.rs  source.rs
crates/mangle-delta/tests/: integration.rs
crates/mangle-driver/: Cargo.toml  README.md
crates/mangle-driver/benches/: wasm_vs_interpreter.rs
crates/mangle-driver/src/: lib.rs
crates/mangle-engine/: Cargo.toml  README.md
crates/mangle-engine/src/: lib.rs  naive.rs
crates/mangle-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/mangle-ffi/include/: mangle.h
crates/mangle-ffi/src/: buffer.rs  builder.rs  cursor.rs  derivation.rs  engine.rs  error.rs  io.rs  lib.rs  query.rs  schema.rs  value.rs
crates/mangle-ffi/tests/: buffer.rs  c_smoke.rs  cursor.rs  derivation.rs  engine_lifecycle.rs  facts_snapshot.rs  insert_retract.rs  load_facts_mgr.rs  load_rules.rs  save_mgr.rs  schema.rs  uaf.rs  values.rs
crates/mangle-ffi/tests/c_smoke/: main.c
crates/mangle-interpreter/: Cargo.toml  README.md
crates/mangle-interpreter/src/: lib.rs
crates/mangle-ir/src/: lib.rs  physical.rs
crates/mangle-parquet/: Cargo.toml  README.md
crates/mangle-parquet/src/: convert.rs  lib.rs  source.rs
crates/mangle-parquet/tests/: integration.rs
crates/mangle-parse/: README.md
crates/mangle-parse/src/: lib.rs  scan.rs  token.rs
crates/mangle-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/mangle-py/.cargo/: config.toml
crates/mangle-py/src/: error.rs  lib.rs  program.rs  query.rs  value.rs
crates/mangle-py/tests/: test_basic.py
crates/mangle-server/: Cargo.toml  README.md
crates/mangle-server/src/: config.rs  config_schema.mg  handlers.rs  main.rs  mutations.rs  query.rs  store.rs
crates/mangle-simplecolumn/: Cargo.toml  README.md
crates/mangle-simplecolumn/src/: lib.rs
crates/mangle-vm/: Cargo.toml  README.md
crates/mangle-vm/src/: composite_host.rs  csv_host.rs  lib.rs
crates/mangle-vm/tests/: e2e.rs  hash_join.rs  reachability.rs
crates/mangle-wasm/: Cargo.toml  README.md
crates/mangle-wasm/playground/: index.html
crates/mangle-wasm/src/: lib.rs
db/: Cargo.toml
db/src/: backend.rs  database.rs  disk_store.rs  file_backend.rs  file_source.rs  lib.rs  provenance.rs  simplerow.rs  source.rs
driver/src/: lib.rs
factstore/src/: lib.rs
interpreter/src/: lib.rs
parse/src/: lib.rs
scripts/: playground.sh  publish-release.sh
server/: Cargo.toml  Containerfile  README.md
server/src/: handlers.rs  main.rs  query.rs  store.rs
