# Cargo.toml for mangle-rs workspace
[workspace]
resolver = "2"

members = [
    "crates/mangle-ast",
    "crates/mangle-analysis",
    "crates/mangle-engine",
    "crates/mangle-common",
    "crates/mangle-parse",
    "crates/mangle-ir",
    "crates/mangle-codegen",
    "crates/mangle-vm",
    "crates/mangle-driver",
    "crates/mangle-interpreter",
    "crates/mangle-simplecolumn",
    "crates/mangle-server",
    "crates/mangle-db",
    "crates/mangle-wasm"
]

[workspace.package]
version = "0.4.0"
authors = ["Burak Emir <burak.emir@gmail.com>"]
edition = "2024"
description = "Rust implementation of Mangle, a logic programming language"
documentation = "https://codeberg.org/TauCeti/mangle-rs"
license = "Apache-2.0"
homepage = "https://codeberg.org/TauCeti/mangle-rs"
repository = "https://codeberg.org/TauCeti/mangle-rs"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0"
bumpalo = "3.14"
fxhash = "0.2.1"
googletest = { version = "0.14.1", features = ["anyhow"] }
mangle-analysis = { version = "0.4.0", path = "./crates/mangle-analysis" }
mangle-ast = { version = "0.4.0", path = "./crates/mangle-ast" }
mangle-codegen = { version = "0.4.0", path = "./crates/mangle-codegen" }
mangle-engine = { version = "0.4.0", path = "./crates/mangle-engine" }
mangle-ir = { version = "0.4.0", path = "./crates/mangle-ir" }
mangle-common = { version = "0.4.0", path = "./crates/mangle-common" }
mangle-parse = { version = "0.4.0", path = "./crates/mangle-parse" }
mangle-vm = { version = "0.4.0", path = "./crates/mangle-vm" }
thiserror = "1.0.58"
log = "0.4"
mangle-driver = { version = "0.4.0", path = "./crates/mangle-driver" }
mangle-interpreter = { version = "0.4.0", path = "./crates/mangle-interpreter" }
mangle-simplecolumn = { version = "0.4.0", path = "./crates/mangle-simplecolumn" }
wasm-encoder = "0.245"
wasmparser = "0.245"
wasmtime = "41"
csv = "1.3"
tempfile = "3.10"
mangle-db = { version = "0.4.0", path = "./crates/mangle-db" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
wasm-bindgen = "0.2"
criterion = { version = "0.5", features = ["html_reports"] }
