[package]
name = "mangle-analysis"
version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
anyhow.workspace = true
fxhash.workspace = true
googletest.workspace = true
mangle-ast.workspace = true
mangle-ir.workspace = true
mangle-common.workspace = true

[dev-dependencies]
mangle-parse.workspace = true