[package]
name = "mangle-common"
version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
anyhow.workspace = true
rustc-hash.workspace = true
mangle-ast.workspace = true

[features]
default = []
edge = []
server = []
