[package]
name = "mangle-db"
version.workspace = true
edition.workspace = true
description = "Persistent fact stores for Mangle"
documentation.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
mangle-common = { workspace = true, features = ["edge"] }
mangle-interpreter.workspace = true
mangle-driver.workspace = true
mangle-ast.workspace = true
mangle-analysis.workspace = true
mangle-parse.workspace = true
mangle-ir.workspace = true
anyhow.workspace = true
fxhash.workspace = true
serde = { workspace = true }
serde_json.workspace = true
sha2.workspace = true
redb = { version = "2", optional = true }

[dev-dependencies]
tempfile.workspace = true

[features]
default = []
disk = ["redb"]
