[package]
name = "mangle-delta"
version = "0.1.0"
edition = "2024"
description = "Delta Lake adapter for Mangle — EDB source with predicate pushdown"
license = "Apache-2.0"
homepage = "https://codeberg.org/TauCeti/mangle-rs"
repository = "https://codeberg.org/TauCeti/mangle-rs"
readme = "README.md"

[dependencies]
# Mangle (path references to sibling workspace)
mangle-common = { path = "../mangle-common", features = ["edge"] }
mangle-db = { path = "../mangle-db" }
mangle-ir = { path = "../mangle-ir" }
anyhow = "1"
log = "0.4"

# Delta Lake — path reference to sibling delta-rs checkout
deltalake-core = { path = "../../../delta-rs/crates/core", features = ["datafusion"] }

# Arrow (for RecordBatch → Value conversion)
arrow = "58"
arrow-array = "58"
arrow-cast = "58"
arrow-schema = "58"
parquet = "58"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
tempfile = "3"

# Serialization
serde_json = "1"
url = "2"
