[package]
name = "mangle-delta"
version.workspace = true
edition.workspace = true
description = "Delta Lake adapter for Mangle — EDB source with predicate pushdown"
documentation.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
# Mangle (workspace)
mangle-common = { workspace = true, features = ["edge"] }
mangle-db.workspace = true
# Shared Arrow → Mangle Value schema mapping (same converter as mangle-parquet)
mangle-parquet = { workspace = true }
anyhow.workspace = true
log.workspace = true

# Delta Lake (published)
deltalake-core = { version = "0.32", features = ["datafusion"] }

# Arrow (RecordBatch type used directly by the source)
arrow-array = "58"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

url = "2"

[dev-dependencies]
arrow-schema = "58"
tempfile.workspace = true
