[package]
name = "mangle-server"
version.workspace = true
edition.workspace = true
description = "HTTP server for Mangle query evaluation"
documentation.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
mangle-driver.workspace = true
mangle-interpreter.workspace = true
mangle-common = { workspace = true, features = ["edge"] }
mangle-ast.workspace = true
mangle-parse.workspace = true
mangle-db.workspace = true
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true
