[package]
name = "mangle-wasm"
version.workspace = true
edition.workspace = true
description = "Browser WASM target for the Mangle interpreter"
documentation.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mangle-ast.workspace = true
mangle-driver.workspace = true
mangle-interpreter.workspace = true
mangle-common = { workspace = true, features = ["edge"] }
anyhow.workspace = true
serde = { workspace = true }
serde_json.workspace = true
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = ["bindgen"]
bindgen = ["dep:wasm-bindgen"]
